# rust_send_email

./: .gitignore  Cargo.toml  README.md  readme.md
example/: .password.toml  main.rs
src/: email.rs  lib.rs  main.rs  recipient.rs  sender.rs
