workspace = { members = [ "testing"] }
[package]
name = "send_email"
version = "0.3.0"
edition = "2021"
license = "GPL-2.0-or-later"
description = "A simple email sender"
homepage = "https://github.com/harryhanYuhao/rust_send_email"
repository = "https://github.com/harryhanYuhao/rust_send_email"
keywords = ["email", "utility"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.11.7"
serde = {version = "1.0.203", features = ["derive"]}
toml = "0.8.14"

